--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
+		"dev": "blocklet dev",
+		"start": "nodemon -w app/api index.js",
+		"build": "rm -rf .next .blocklet && next build",
+		"bump": "blocklet version",
+		"bundle": "npm run build && blocklet bundle --create-release",
 		"lint": "next lint"
 	},
 	"dependencies": {
 		"@tldraw/tldraw": "^2.0.0-canary.81f6fae070ad",
 		"@vercel/analytics": "^1.1.1",
 		"canvas-size": "^1.2.6",
+		"express": "^4.18.2",
 		"next": "14.0.1",
 		"react": "^18",
 		"react-dom": "^18"
@@ -23,6 +26,7 @@
 		"autoprefixer": "^10.0.1",
 		"eslint": "^8",
 		"eslint-config-next": "14.0.1",
+		"nodemon": "^3.0.1",
 		"postcss": "^8",
 		"tailwindcss": "^3.3.0",
 		"typescript": "^5"
